--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@capacitor/app": "6.0.1",
+    "@capacitor/camera": "^6.1.0",
     "@capacitor/core": "6.1.2",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
+    "@capacitor/preferences": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
+    "@ionic-native/camera": "^5.36.0",
     "@ionic/angular": "^7.8.6",
     "@ionic/angular-server": "^7.8.6",
     "@ionic/core": "^7.8.6",
+    "@ionic/pwa-elements": "^3.3.0",
+    "cordova-plugin-camera": "^7.0.0",
     "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
     "rxjs": "^7.5.0",
